@@ -8,7 +8,6 @@
 
 package ninja;
 
-import com.google.common.io.BaseEncoding;
 import io.netty.handler.codec.http.HttpHeaders;
 import sirius.kernel.commons.Strings;
 import sirius.kernel.di.std.Part;
@@ -19,8 +18,8 @@ import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static sirius.kernel.commons.Strings.join;
 
@@ -88,17 +87,19 @@ public class AwsLegacyHashCalculator {
                                              .filter(this::relevantAmazonHeader)
                                              .map(name -> toHeaderStringRepresentation(name, requestHeaders))
                                              .sorted()
-                                             .collect(Collectors.toList());
+                                             .toList();
 
         for (String header : headers) {
             stringToSign.append(header);
             stringToSign.append("\n");
         }
 
-        stringToSign.append(pathPrefix).append('/').append(S3Dispatcher.getEffectiveURI(webContext.getRawRequestedURI()));
+        stringToSign.append(pathPrefix)
+                    .append('/')
+                    .append(S3Dispatcher.getEffectiveURI(webContext.getRawRequestedURI()));
 
         char separator = '?';
-        for (String parameterName : webContext.getParameterNames().stream().sorted().collect(Collectors.toList())) {
+        for (String parameterName : webContext.getParameterNames().stream().sorted().toList()) {
             // Skip parameters that aren't part of the canonical signed string
             if (SIGNED_PARAMETERS.contains(parameterName)) {
                 stringToSign.append(separator).append(parameterName);
@@ -117,7 +118,7 @@ public class AwsLegacyHashCalculator {
         Mac mac = Mac.getInstance("HmacSHA1");
         mac.init(keySpec);
         byte[] result = mac.doFinal(stringToSign.toString().getBytes(StandardCharsets.UTF_8.name()));
-        return BaseEncoding.base64().encode(result);
+        return Base64.getEncoder().encodeToString(result);
     }
 
     private boolean relevantAmazonHeader(final String name) {
